# Agentic-AI-for-Mathematical-Equation-Solving

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  agent_comprehensive_evaluation_results.json  mypy.ini  pyproject.toml  requirements.txt  setup.py
baselines/: baseline1_smolllm2.py  baseline2_code_execution.py
data/: parse_into_dataset.ipynb
data/processed/: math_qa_dataset.parquet
docs/: steps_idea.md
eval_agent/: eval_math_agent.py  fb_gemini_eval.py  get_error_statistic.py
generate_data/: generate.bash  math_qa_dataset.parquet  parse_into_dataset.ipynb
generate_data/math_qa_dataset/: dataset_info.json  state.json
math_agent/: __init__.py  cli.py
math_agent/baseline/: __init__.py  base_llm_solver.py  baseline2_code_execution.py  baseline_qwen.py  sample_evaluation_results.json
math_agent/code_eval/: __init__.py  comprehensive_evaluation_results.json  evaluation_results.json  math_code_agent.py
math_agent/code_exec/: README.md  __init__.py  math_code_agent.py
math_agent/code_exec_eval/: feedback_code_agent.py
math_agent/core/: __init__.py  config.py  constants.py  exceptions.py  logging_config.py
math_agent/utils/: __init__.py  commons.py
notebooks/: base_llm_solver.ipynb  evaluation.ipynb
results/: agent_comprehensive_evaluation_results.json  baseline1_smolllm2_all_splits_results.csv  baseline2_code_execution_results.csv  fb_gemini_eval.json  math_eval_hard_results.json  train_hard_results.json  train_medium_results_fixed.json
results/baseline/: baseline1_results.csv  baseline_results.csv
results/code_eval/: math_eval_easy_results.json  math_eval_extrapolate_results.json  math_eval_interpolate_results.json  math_eval_medium_results.json  train_easy_results.json  train_extrapolate_results.json  train_interpolate_results.json
(+242 files in other folders)
