[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-agent"
version = "0.1.0"
description = "Agentic AI for Mathematical Equation Solving"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "datasets>=2.0.0",
    "tqdm>=4.65.0",
    "smolagents>=0.1.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "sympy>=1.12.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
math-agent = "math_agent.code_eval.math_code_agent:main"

[project.urls]
Homepage = "https://github.com/your-username/Agentic-AI-for-Mathematical-Equation-Solving"
Repository = "https://github.com/your-username/Agentic-AI-for-Mathematical-Equation-Solving"
Issues = "https://github.com/your-username/Agentic-AI-for-Mathematical-Equation-Solving/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["math_agent*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 